# HDGrid

./: CMakeLists.txt  README.md  auto-batch-search-main.cu  build.sh  read_hfs5.py
core/: HOPS.cu  filter.cu  mat_operators.cuh  merge_res.cu  merge_res.cuh  mmr.cu  mmr.cuh  preprocessing.cuh  refine.cu  zorder.cu
index/: index-factory.cuh  prefiltering.cu  product-quantization.cuh  sorting-index.cuh
index/2-level_index/: Super-Grid-IVF_PQ.cu  Super-Grid-IVF_PQ.cuh  common.cuh
index/baseline/: cagra-post.cu  cagra-post.cuh  ivfpq-post.cuh
search-engine/: search-engine-auto-batch.cu
src/: read_hfs5.py
src/core/: HOPS.cuh  filter.cuh  interfaces.cuh  mat_operators.cuh  preprocessing.cu  refine.cuh  zorder.cu  zorder.cuh
src/index/: parafiltering.cu  parafiltering.cuh  prefiltering.cuh  product-quantization.cu  sorting-index.cu
src/index/2-level_index/: Grid-IVF_PQ.cu  Grid-IVF_PQ.cuh  IVF-IVF_PQ.cu  IVF-IVF_PQ.cuh  Super-Grid-IVF_PQ.cu  Super-Grid-IVF_PQ.cuh  X-IVF_PQ.cu  X-IVF_PQ.cuh  common.cu
src/index/baseline/: ivfpq-post.cu
src/search-engine/: search-engine-auto-batch.cu  search-engine-auto-batch.cuh  search-engine-interfaces.cuh
src/tools/: generate_config.py  generate_size_file.py  mv_file.sh  slice_by_colmns.py  slice_data.py  transform_to_fvecs.py
src/utils/: config_utils.h  debugging_utils.cuh  io_utils.cu  io_utils.cuh  perf_utils.cuh  string_utils.h
src/verification/: ground_truth.cuh  test_compute_pq_dis.cuh  test_filter.cuh  test_lut_build.cuh  test_reduce.cuh  verification.cuh
tools/: generate_config.py  slice_data.sh
utils/: math_utils.h  perf_utils.cuh
verification/: test_modify_indices_kernel.cuh  test_select_element.cuh  verification.cuh
